Fix nav link's to be right-aligned

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -30,7 +30,9 @@
   padding-left:5px;
   padding-bottom: 8px;
 }
-
+a.nav-link {
+  text-align: end;
+}
 @media (max-width: 992px) 
 {
   #cart-button {
